--- a/books.html
+++ b/books.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	  
 <title>My Web Site</title>
     <!--Books page has made by using <table> and </table> tags. This because mobile devices should see this page by scrolling the screen.-->
